Updated to use background image

--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -6,7 +6,9 @@
 <style>
     /* Override base styles for new design */
     body {
-        background: #EDF2F5; /* Muted page background */
+        background: #EDF2F5 url('/static/img/background.png'); /* Muted page background with pattern */
+        background-size: cover;
+        background-attachment: fixed;
         font-size: 19px !important; /* Force bigger font */
     }
     
