--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,7 +21,9 @@
             font-family: 'Lexend', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             line-height: 1.6;
             color: #111827;
-            background: #EDF2F5;
+            background: #EDF2F5 url('/static/img/background.png');
+            background-size: cover;
+            background-attachment: fixed;
             font-size: 1.125rem; /* 18px base */
         }
         
